sumo/tests/dfrouter/errors/network/edge/root__edge#function__empty1/errors.dfrouter
Error: Attribute 'function' in definition of edge '1' is empty.
Error: An unknown edge occured (id='1').
Quitting (on error).
